lab2/parser.out
Grammar:

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statements statement
Rule 3     statement -> RETURN expression ;
Rule 4     statement -> CONTINUE ;
Rule 5     statement -> BREAK ;
Rule 6     statement -> print_statement
Rule 7     statement -> assign_expression
Rule 8     statement -> for_statement
Rule 9     statement -> while_statement
Rule 10    statement -> if_statement
Rule 11    statement -> { statements }
Rule 12    statement -> ;
Rule 13    if_statement -> IF ( relation_expression ) statement  [precedence=nonassoc, level=1]
Rule 14    if_statement -> IF ( relation_expression ) statement ELSE statement  [precedence=nonassoc, level=2]
Rule 15    while_statement -> WHILE ( relation_expression ) statement
Rule 16    for_statement -> FOR ID = id_int : id_int statement
Rule 17    print_statement -> PRINT print_recursive ;
Rule 18    print_recursive -> value
Rule 19    print_recursive -> print_recursive , value
Rule 20    id_int -> INTNUM
Rule 21    id_int -> ID
Rule 22    expression -> expression DOTDIV expression  [precedence=left, level=7]
Rule 23    expression -> expression DOTMUL expression  [precedence=left, level=7]
Rule 24    expression -> expression DOTSUB expression  [precedence=left, level=6]
Rule 25    expression -> expression DOTADD expression  [precedence=left, level=6]
Rule 26    expression -> expression / expression  [precedence=left, level=5]
Rule 27    expression -> expression * expression  [precedence=left, level=5]
Rule 28    expression -> expression - expression  [precedence=left, level=4]
Rule 29    expression -> expression + expression  [precedence=left, level=4]
Rule 30    expression -> expression '
Rule 31    expression -> [ line_of_num ]
Rule 32    expression -> [ matrix_rows ]
Rule 33    expression -> - expression  [precedence=right, level=8]
Rule 34    expression -> matrix_ref
Rule 35    expression -> matrix_funcs
Rule 36    expression -> relation_expression
Rule 37    expression -> assign_expression
Rule 38    expression -> value
Rule 39    assign_expression -> id_ref DIVASSIGN expression ;
Rule 40    assign_expression -> id_ref MULASSIGN expression ;
Rule 41    assign_expression -> id_ref SUBASSIGN expression ;
Rule 42    assign_expression -> id_ref ADDASSIGN expression ;
Rule 43    assign_expression -> id_ref = expression ;
Rule 44    relation_expression -> expression NE expression  [precedence=nonassoc, level=3]
Rule 45    relation_expression -> expression EQ expression  [precedence=nonassoc, level=3]
Rule 46    relation_expression -> expression GE expression  [precedence=nonassoc, level=3]
Rule 47    relation_expression -> expression LE expression  [precedence=nonassoc, level=3]
Rule 48    relation_expression -> expression > expression  [precedence=nonassoc, level=3]
Rule 49    relation_expression -> expression < expression  [precedence=nonassoc, level=3]
Rule 50    id_ref -> tab_ref
Rule 51    id_ref -> matrix_ref
Rule 52    id_ref -> ID
Rule 53    matrix_ref -> ID [ id_int ]
Rule 54    matrix_ref -> ID [ id_int , id_int ]
Rule 55    tab_ref -> ID [ id_int : ]
Rule 56    tab_ref -> ID [ : id_int ]
Rule 57    tab_ref -> ID [ id_int : id_int ]
Rule 58    matrix_rows -> [ line_of_num ]
Rule 59    matrix_rows -> matrix_rows , [ line_of_num ]
Rule 60    line_of_num -> line_of_num , INTNUM
Rule 61    line_of_num -> INTNUM
Rule 62    matrix_funcs -> EYE ( INTNUM )
Rule 63    matrix_funcs -> ONES ( INTNUM )
Rule 64    matrix_funcs -> ZEROS ( INTNUM )
Rule 65    value -> STRING
Rule 66    value -> ID
Rule 67    value -> FLOATNUM
Rule 68    value -> INTNUM

Unused terminals:

    LT
    TRANSPOSE
    GT

Terminals, with rules where they appear:

'                    : 30
(                    : 13 14 15 62 63 64
)                    : 13 14 15 62 63 64
*                    : 27
+                    : 29
,                    : 19 54 59 60
-                    : 28 33
/                    : 26
:                    : 16 55 56 57
;                    : 3 4 5 12 17 39 40 41 42 43
<                    : 49
=                    : 16 43
>                    : 48
ADDASSIGN            : 42
BREAK                : 5
CONTINUE             : 4
DIVASSIGN            : 39
DOTADD               : 25
DOTDIV               : 22
DOTMUL               : 23
DOTSUB               : 24
ELSE                 : 14
EQ                   : 45
EYE                  : 62
FLOATNUM             : 67
FOR                  : 16
GE                   : 46
GT                   : 
ID                   : 16 21 52 53 54 55 56 57 66
IF                   : 13 14
INTNUM               : 20 60 61 62 63 64 68
LE                   : 47
LT                   : 
MULASSIGN            : 40
NE                   : 44
ONES                 : 63
PRINT                : 17
RETURN               : 3
STRING               : 65
SUBASSIGN            : 41
TRANSPOSE            : 
WHILE                : 15
ZEROS                : 64
[                    : 31 32 53 54 55 56 57 58 59
]                    : 31 32 53 54 55 56 57 58 59
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear:

assign_expression    : 7 37
expression           : 3 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 33 39 40 41 42 43 44 44 45 45 46 46 47 47 48 48 49 49
for_statement        : 8
id_int               : 16 16 53 54 54 55 56 57 57
id_ref               : 39 40 41 42 43
if_statement         : 10
line_of_num          : 31 58 59 60
matrix_funcs         : 35
matrix_ref           : 34 51
matrix_rows          : 32 59
print_recursive      : 17 19
print_statement      : 6
relation_expression  : 13 14 15 36
statement            : 1 2 13 14 14 15 16
statements           : 2 11 0
tab_ref              : 50
value                : 18 19 38
while_statement      : 9


state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statements statement
    (3) statement -> . RETURN expression ;
    (4) statement -> . CONTINUE ;
    (5) statement -> . BREAK ;
    (6) statement -> . print_statement
    (7) statement -> . assign_expression
    (8) statement -> . for_statement
    (9) statement -> . while_statement
    (10) statement -> . if_statement
    (11) statement -> . { statements }
    (12) statement -> . ;
    (17) print_statement -> . PRINT print_recursive ;
    (39) assign_expression -> . id_ref DIVASSIGN expression ;
    (40) assign_expression -> . id_ref MULASSIGN expression ;
    (41) assign_expression -> . id_ref SUBASSIGN expression ;
    (42) assign_expression -> . id_ref ADDASSIGN expression ;
    (43) assign_expression -> . id_ref = expression ;
    (16) for_statement -> . FOR ID = id_int : id_int statement
    (15) while_statement -> . WHILE ( relation_expression ) statement
    (13) if_statement -> . IF ( relation_expression ) statement
    (14) if_statement -> . IF ( relation_expression ) statement ELSE statement
    (50) id_ref -> . tab_ref
    (51) id_ref -> . matrix_ref
    (52) id_ref -> . ID
    (55) tab_ref -> . ID [ id_int : ]
    (56) tab_ref -> . ID [ : id_int ]
    (57) tab_ref -> . ID [ id_int : id_int ]
    (53) matrix_ref -> . ID [ id_int ]
    (54) matrix_ref -> . ID [ id_int , id_int ]
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 5
    BREAK           shift and go to state 6
    {               shift and go to state 12
    ;               shift and go to state 4
    PRINT           shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 16

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    print_statement                shift and go to state 7
    assign_expression              shift and go to state 8
    for_statement                  shift and go to state 9
    while_statement                shift and go to state 10
    if_statement                   shift and go to state 11
    id_ref                         shift and go to state 14
    tab_ref                        shift and go to state 19
    matrix_ref                     shift and go to state 20

state 1

    (0) S' -> statements .
    (2) statements -> statements . statement
    (3) statement -> . RETURN expression ;
    (4) statement -> . CONTINUE ;
    (5) statement -> . BREAK ;
    (6) statement -> . print_statement
    (7) statement -> . assign_expression
    (8) statement -> . for_statement
    (9) statement -> . while_statement
    (10) statement -> . if_statement
    (11) statement -> . { statements }
    (12) statement -> . ;
    (17) print_statement -> . PRINT print_recursive ;
    (39) assign_expression -> . id_ref DIVASSIGN expression ;
    (40) assign_expression -> . id_ref MULASSIGN expression ;
    (41) assign_expression -> . id_ref SUBASSIGN expression ;
    (42) assign_expression -> . id_ref ADDASSIGN expression ;
    (43) assign_expression -> . id_ref = expression ;
    (16) for_statement -> . FOR ID = id_int : id_int statement
    (15) while_statement -> . WHILE ( relation_expression ) statement
    (13) if_statement -> . IF ( relation_expression ) statement
    (14) if_statement -> . IF ( relation_expression ) statement ELSE statement
    (50) id_ref -> . tab_ref
    (51) id_ref -> . matrix_ref
    (52) id_ref -> . ID
    (55) tab_ref -> . ID [ id_int : ]
    (56) tab_ref -> . ID [ : id_int ]
    (57) tab_ref -> . ID [ id_int : id_int ]
    (53) matrix_ref -> . ID [ id_int ]
    (54) matrix_ref -> . ID [ id_int , id_int ]
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 5
    BREAK           shift and go to state 6
    {               shift and go to state 12
    ;               shift and go to state 4
    PRINT           shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 16

    statement                      shift and go to state 21
    print_statement                shift and go to state 7
    assign_expression              shift and go to state 8
    for_statement                  shift and go to state 9
    while_statement                shift and go to state 10
    if_statement                   shift and go to state 11
    id_ref                         shift and go to state 14
    tab_ref                        shift and go to state 19
    matrix_ref                     shift and go to state 20

state 2

    (1) statements -> statement .
    RETURN          reduce using rule 1 (statements -> statement .)
    CONTINUE        reduce using rule 1 (statements -> statement .)
    BREAK           reduce using rule 1 (statements -> statement .)
    {               reduce using rule 1 (statements -> statement .)
    ;               reduce using rule 1 (statements -> statement .)
    PRINT           reduce using rule 1 (statements -> statement .)
    FOR             reduce using rule 1 (statements -> statement .)
    WHILE           reduce using rule 1 (statements -> statement .)
    IF              reduce using rule 1 (statements -> statement .)
    ID              reduce using rule 1 (statements -> statement .)
    $end            reduce using rule 1 (statements -> statement .)
    }               reduce using rule 1 (statements -> statement .)


state 3

    (3) statement -> RETURN . expression ;
    (22) expression -> . expression DOTDIV expression
    (23) expression -> . expression DOTMUL expression
    (24) expression -> . expression DOTSUB expression
    (25) expression -> . expression DOTADD expression
    (26) expression -> . expression / expression
    (27) expression -> . expression * expression
    (28) expression -> . expression - expression
    (29) expression -> . expression + expression
    (30) expression -> . expression '
    (31) expression -> . [ line_of_num ]
    (32) expression -> . [ matrix_rows ]
    (33) expression -> . - expression
    (34) expression -> . matrix_ref
    (35) expression -> . matrix_funcs
    (36) expression -> . relation_expression
    (37) expression -> . assign_expression
    (38) expression -> . value
    (53) matrix_ref -> . ID [ id_int ]
    (54) matrix_ref -> . ID [ id_int , id_int ]
    (62) matrix_funcs -> . EYE ( INTNUM )
    (63) matrix_funcs -> . ONES ( INTNUM )
    (64) matrix_funcs -> . ZEROS ( INTNUM )
    (44) relation_expression -> . expression NE expression
    (45) relation_expression -> . expression EQ expression
    (46) relation_expression -> . expression GE expression
    (47) relation_expression -> . expression LE expression
    (48) relation_expression -> . expression > expression
    (49) relation_expression -> . expression < expression
    (39) assign_expression -> . id_ref DIVASSIGN expression ;
    (40) assign_expression -> . id_ref MULASSIGN expression ;
    (41) assign_expression -> . id_ref SUBASSIGN expression ;
    (42) assign_expression -> . id_ref ADDASSIGN expression ;
    (43) assign_expression -> . id_ref = expression ;
    (65) value -> . STRING
    (66) value -> . ID
    (67) value -> . FLOATNUM
    (68) value -> . INTNUM
    (50) id_ref -> . tab_ref
    (51) id_ref -> . matrix_ref
    (52) id_ref -> . ID
    (55) tab_ref -> . ID [ id_int : ]
    (56) tab_ref -> . ID [ : id_int ]
    (57) tab_ref -> . ID [ id_int : id_int ]
    [               shift and go to state 24
    -               shift and go to state 23
    ID              shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 33
    ZEROS           shift and go to state 34
    STRING          shift and go to state 35
    FLOATNUM        shift and go to state 36
    INTNUM          shift and go to state 32

    expression                     shift and go to state 22
    matrix_ref                     shift and go to state 25
    matrix_funcs                   shift and go to state 26
    relation_expression            shift and go to state 27
    assign_expression              shift and go to state 28
    value                          shift and go to state 29
    id_ref                         shift and go to state 14
    tab_ref                        shift and go to state 19

state 4

    (12) statement -> ; .
    RETURN          reduce using rule 12 (statement -> ; .)
    CONTINUE        reduce using rule 12 (statement -> ; .)
    BREAK           reduce using rule 12 (statement -> ; .)
    {               reduce using rule 12 (statement -> ; .)
    ;               reduce using rule 12 (statement -> ; .)
    PRINT           reduce using rule 12 (statement -> ; .)
    FOR             reduce using rule 12 (statement -> ; .)
    WHILE           reduce using rule 12 (statement -> ; .)
    IF              reduce using rule 12 (statement -> ; .)
    ID              reduce using rule 12 (statement -> ; .)
    $end            reduce using rule 12 (statement -> ; .)
    }               reduce using rule 12 (statement -> ; .)
    ELSE            reduce using rule 12 (statement -> ; .)


state 5

    (4) statement -> CONTINUE . ;
    ;               shift and go to state 37


state 6

    (5) statement -> BREAK . ;
    ;               shift and go to state 38


state 7

    (6) statement -> print_statement .
    RETURN          reduce using rule 6 (statement -> print_statement .)
    CONTINUE        reduce using rule 6 (statement -> print_statement .)
    BREAK           reduce using rule 6 (statement -> print_statement .)
    {               reduce using rule 6 (statement -> print_statement .)
    ;               reduce using rule 6 (statement -> print_statement .)
    PRINT           reduce using rule 6 (statement -> print_statement .)
    FOR             reduce using rule 6 (statement -> print_statement .)
    WHILE           reduce using rule 6 (statement -> print_statement .)
    IF              reduce using rule 6 (statement -> print_statement .)
    ID              reduce using rule 6 (statement -> print_statement .)
    $end            reduce using rule 6 (statement -> print_statement .)
    }               reduce using rule 6 (statement -> print_statement .)
    ELSE            reduce using rule 6 (statement -> print_statement .)


state 8

    (7) statement -> assign_expression .
    RETURN          reduce using rule 7 (statement -> assign_expression .)
    CONTINUE        reduce using rule 7 (statement -> assign_expression .)
    BREAK           reduce using rule 7 (statement -> assign_expression .)
    {               reduce using rule 7 (statement -> assign_expression .)
    ;               reduce using rule 7 (statement -> assign_expression .)
    PRINT           reduce using rule 7 (statement -> assign_expression .)
    FOR             reduce using rule 7 (statement -> assign_expression .)
    WHILE           reduce using rule 7 (statement -> assign_expression .)
    IF              reduce using rule 7 (statement -> assign_expression .)
    ID              reduce using rule 7 (statement -> assign_expression .)
    $end            reduce using rule 7 (statement -> assign_expression .)
    }               reduce using rule 7 (statement -> assign_expression .)
    ELSE            reduce using rule 7 (statement -> assign_expression .)


state 9

    (8) statement -> for_statement .
    RETURN          reduce using rule 8 (statement -> for_statement .)
    CONTINUE        reduce using rule 8 (statement -> for_statement .)
    BREAK           reduce using rule 8 (statement -> for_statement .)
    {               reduce using rule 8 (statement -> for_statement .)
    ;               reduce using rule 8 (statement -> for_statement .)
    PRINT           reduce using rule 8 (statement -> for_statement .)
    FOR             reduce using rule 8 (statement -> for_statement .)
    WHILE           reduce using rule 8 (statement -> for_statement .)
    IF              reduce using rule 8 (statement -> for_statement .)
    ID              reduce using rule 8 (statement -> for_statement .)
    $end            reduce using rule 8 (statement -> for_statement .)
    }               reduce using rule 8 (statement -> for_statement .)
    ELSE            reduce using rule 8 (statement -> for_statement .)


state 10

    (9) statement -> while_statement .
    RETURN          reduce using rule 9 (statement -> while_statement .)
    CONTINUE        reduce using rule 9 (statement -> while_statement .)
    BREAK           reduce using rule 9 (statement -> while_statement .)
    {               reduce using rule 9 (statement -> while_statement .)
    ;               reduce using rule 9 (statement -> while_statement .)
    PRINT           reduce using rule 9 (statement -> while_statement .)
    FOR             reduce using rule 9 (statement -> while_statement .)
    WHILE           reduce using rule 9 (statement -> while_statement .)
    IF              reduce using rule 9 (statement -> while_statement .)
    ID              reduce using rule 9 (statement -> while_statement .)
    $end            reduce using rule 9 (statement -> while_statement .)
    }               reduce using rule 9 (statement -> while_statement .)
    ELSE            reduce using rule 9 (statement -> while_statement .)


state 11

    (10) statement -> if_statement .
    RETURN          reduce using rule 10 (statement -> if_statement .)
    CONTINUE        reduce using rule 10 (statement -> if_statement .)
    BREAK           reduce using rule 10 (statement -> if_statement .)
    {               reduce using rule 10 (statement -> if_statement .)
    ;               reduce using rule 10 (statement -> if_statement .)
    PRINT           reduce using rule 10 (statement -> if_statement .)
    FOR             reduce using rule 10 (statement -> if_statement .)
    WHILE           reduce using rule 10 (statement -> if_statement .)
    IF              reduce using rule 10 (statement -> if_statement .)
    ID              reduce using rule 10 (statement -> if_statement .)
    $end            reduce using rule 10 (statement -> if_statement .)
    }               reduce using rule 10 (statement -> if_statement .)
    ELSE            reduce using rule 10 (statement -> if_statement .)


state 12

    (11) statement -> { . statements }
    (1) statements -> . statement
    (2) statements -> . statements statement
    (3) statement -> . RETURN expression ;
    (4) statement -> . CONTINUE ;
    (5) statement -> . BREAK ;
    (6) statement -> . print_statement
    (7) statement -> . assign_expression
    (8) statement -> . for_statement
    (9) statement -> . while_statement
    (10) statement -> . if_statement
    (11) statement -> . { statements }
    (12) statement -> . ;
    (17) print_statement -> . PRINT print_recursive ;
    (39) assign_expression -> . id_ref DIVASSIGN expression ;
    (40) assign_expression -> . id_ref MULASSIGN expression ;
    (41) assign_expression -> . id_ref SUBASSIGN expression ;
    (42) assign_expression -> . id_ref ADDASSIGN expression ;
    (43) assign_expression -> . id_ref = expression ;
    (16) for_statement -> . FOR ID = id_int : id_int statement
    (15) while_statement -> . WHILE ( relation_expression ) statement
    (13) if_statement -> . IF ( relation_expression ) statement
    (14) if_statement -> . IF ( relation_expression ) statement ELSE statement
    (50) id_ref -> . tab_ref
    (51) id_ref -> . matrix_ref
    (52) id_ref -> . ID
    (55) tab_ref -> . ID [ id_int : ]
    (56) tab_ref -> . ID [ : id_int ]
    (57) tab_ref -> . ID [ id_int : id_int ]
    (53) matrix_ref -> . ID [ id_int ]
    (54) matrix_ref -> . ID [ id_int , id_int ]
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 5
    BREAK           shift and go to state 6
    {               shift and go to state 12
    ;               shift and go to state 4
    PRINT           shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 16

    statements                     shift and go to state 39
    statement                      shift and go to state 2
    print_statement                shift and go to state 7
    assign_expression              shift and go to state 8
    for_statement                  shift and go to state 9
    while_statement                shift and go to state 10
    if_statement                   shift and go to state 11
    id_ref                         shift and go to state 14
    tab_ref                        shift and go to state 19
    matrix_ref                     shift and go to state 20

state 13

    (17) print_statement -> PRINT . print_recursive ;
    (18) print_recursive -> . value
    (19) print_recursive -> . print_recursive , value
    (65) value -> . STRING
    (66) value -> . ID
    (67) value -> . FLOATNUM
    (68) value -> . INTNUM
    STRING          shift and go to state 35
    ID              shift and go to state 42
    FLOATNUM        shift and go to state 36
    INTNUM          shift and go to state 32

    print_recursive                shift and go to state 40
    value                          shift and go to state 41

state 14

    (39) assign_expression -> id_ref . DIVASSIGN expression ;
    (40) assign_expression -> id_ref . MULASSIGN expression ;
    (41) assign_expression -> id_ref . SUBASSIGN expression ;
    (42) assign_expression -> id_ref . ADDASSIGN expression ;
    (43) assign_expression -> id_ref . = expression ;
    DIVASSIGN       shift and go to state 43
    MULASSIGN       shift and go to state 44
    SUBASSIGN       shift and go to state 45
    ADDASSIGN       shift and go to state 46
    =               shift and go to state 47


state 15

    (16) for_statement -> FOR . ID = id_int : id_int statement
    ID              shift and go to state 48


state 16

    (52) id_ref -> ID .
    (55) tab_ref -> ID . [ id_int : ]
    (56) tab_ref -> ID . [ : id_int ]
    (57) tab_ref -> ID . [ id_int : id_int ]
    (53) matrix_ref -> ID . [ id_int ]
    (54) matrix_ref -> ID . [ id_int , id_int ]
    DIVASSIGN       reduce using rule 52 (id_ref -> ID .)
    MULASSIGN       reduce using rule 52 (id_ref -> ID .)
    SUBASSIGN       reduce using rule 52 (id_ref -> ID .)
    ADDASSIGN       reduce using rule 52 (id_ref -> ID .)
    =               reduce using rule 52 (id_ref -> ID .)
    [               shift and go to state 49


state 17

    (15) while_statement -> WHILE . ( relation_expression ) statement
    (               shift and go to state 50


state 18

    (13) if_statement -> IF . ( relation_expression ) statement
    (14) if_statement -> IF . ( relation_expression ) statement ELSE statement
    (               shift and go to state 51


state 19

    (50) id_ref -> tab_ref .
    DIVASSIGN       reduce using rule 50 (id_ref -> tab_ref .)
    MULASSIGN       reduce using rule 50 (id_ref -> tab_ref .)
    SUBASSIGN       reduce using rule 50 (id_ref -> tab_ref .)
    ADDASSIGN       reduce using rule 50 (id_ref -> tab_ref .)
    =               reduce using rule 50 (id_ref -> tab_ref .)


state 20

    (51) id_ref -> matrix_ref .
    DIVASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    MULASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    SUBASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    ADDASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    =               reduce using rule 51 (id_ref -> matrix_ref .)


state 21

    (2) statements -> statements statement .
    RETURN          reduce using rule 2 (statements -> statements statement .)
    CONTINUE        reduce using rule 2 (statements -> statements statement .)
    BREAK           reduce using rule 2 (statements -> statements statement .)
    {               reduce using rule 2 (statements -> statements statement .)
    ;               reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    }               reduce using rule 2 (statements -> statements statement .)


state 22

    (3) statement -> RETURN expression . ;
    (22) expression -> expression . DOTDIV expression
    (23) expression -> expression . DOTMUL expression
    (24) expression -> expression . DOTSUB expression
    (25) expression -> expression . DOTADD expression
    (26) expression -> expression . / expression
    (27) expression -> expression . * expression
    (28) expression -> expression . - expression
    (29) expression -> expression . + expression
    (30) expression -> expression . '
    (44) relation_expression -> expression . NE expression
    (45) relation_expression -> expression . EQ expression
    (46) relation_expression -> expression . GE expression
    (47) relation_expression -> expression . LE expression
    (48) relation_expression -> expression . > expression
    (49) relation_expression -> expression . < expression
    ;               shift and go to state 52
    DOTDIV          shift and go to state 53
    DOTMUL          shift and go to state 54
    DOTSUB          shift and go to state 55
    DOTADD          shift and go to state 56
    /               shift and go to state 57
    *               shift and go to state 58
    -               shift and go to state 59
    +               shift and go to state 60
    '               shift and go to state 61
    NE              shift and go to state 62
    EQ              shift and go to state 63
    GE              shift and go to state 64
    LE              shift and go to state 65
    >               shift and go to state 66
    <               shift and go to state 67


state 23

    (33) expression -> - . expression
    (22) expression -> . expression DOTDIV expression
    (23) expression -> . expression DOTMUL expression
    (24) expression -> . expression DOTSUB expression
    (25) expression -> . expression DOTADD expression
    (26) expression -> . expression / expression
    (27) expression -> . expression * expression
    (28) expression -> . expression - expression
    (29) expression -> . expression + expression
    (30) expression -> . expression '
    (31) expression -> . [ line_of_num ]
    (32) expression -> . [ matrix_rows ]
    (33) expression -> . - expression
    (34) expression -> . matrix_ref
    (35) expression -> . matrix_funcs
    (36) expression -> . relation_expression
    (37) expression -> . assign_expression
    (38) expression -> . value
    (53) matrix_ref -> . ID [ id_int ]
    (54) matrix_ref -> . ID [ id_int , id_int ]
    (62) matrix_funcs -> . EYE ( INTNUM )
    (63) matrix_funcs -> . ONES ( INTNUM )
    (64) matrix_funcs -> . ZEROS ( INTNUM )
    (44) relation_expression -> . expression NE expression
    (45) relation_expression -> . expression EQ expression
    (46) relation_expression -> . expression GE expression
    (47) relation_expression -> . expression LE expression
    (48) relation_expression -> . expression > expression
    (49) relation_expression -> . expression < expression
    (39) assign_expression -> . id_ref DIVASSIGN expression ;
    (40) assign_expression -> . id_ref MULASSIGN expression ;
    (41) assign_expression -> . id_ref SUBASSIGN expression ;
    (42) assign_expression -> . id_ref ADDASSIGN expression ;
    (43) assign_expression -> . id_ref = expression ;
    (65) value -> . STRING
    (66) value -> . ID
    (67) value -> . FLOATNUM
    (68) value -> . INTNUM
    (50) id_ref -> . tab_ref
    (51) id_ref -> . matrix_ref
    (52) id_ref -> . ID
    (55) tab_ref -> . ID [ id_int : ]
    (56) tab_ref -> . ID [ : id_int ]
    (57) tab_ref -> . ID [ id_int : id_int ]
    [               shift and go to state 24
    -               shift and go to state 23
    ID              shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 33
    ZEROS           shift and go to state 34
    STRING          shift and go to state 35
    FLOATNUM        shift and go to state 36
    INTNUM          shift and go to state 32

    expression                     shift and go to state 68
    matrix_ref                     shift and go to state 25
    matrix_funcs                   shift and go to state 26
    relation_expression            shift and go to state 27
    assign_expression              shift and go to state 28
    value                          shift and go to state 29
    id_ref                         shift and go to state 14
    tab_ref                        shift and go to state 19

state 24

    (31) expression -> [ . line_of_num ]
    (32) expression -> [ . matrix_rows ]
    (60) line_of_num -> . line_of_num , INTNUM
    (61) line_of_num -> . INTNUM
    (58) matrix_rows -> . [ line_of_num ]
    (59) matrix_rows -> . matrix_rows , [ line_of_num ]
    INTNUM          shift and go to state 72
    [               shift and go to state 69

    line_of_num                    shift and go to state 70
    matrix_rows                    shift and go to state 71

state 25

    (34) expression -> matrix_ref .
    (51) id_ref -> matrix_ref .
    ;               reduce using rule 34 (expression -> matrix_ref .)
    DOTDIV          reduce using rule 34 (expression -> matrix_ref .)
    DOTMUL          reduce using rule 34 (expression -> matrix_ref .)
    DOTSUB          reduce using rule 34 (expression -> matrix_ref .)
    DOTADD          reduce using rule 34 (expression -> matrix_ref .)
    /               reduce using rule 34 (expression -> matrix_ref .)
    *               reduce using rule 34 (expression -> matrix_ref .)
    -               reduce using rule 34 (expression -> matrix_ref .)
    +               reduce using rule 34 (expression -> matrix_ref .)
    '               reduce using rule 34 (expression -> matrix_ref .)
    NE              reduce using rule 34 (expression -> matrix_ref .)
    EQ              reduce using rule 34 (expression -> matrix_ref .)
    GE              reduce using rule 34 (expression -> matrix_ref .)
    LE              reduce using rule 34 (expression -> matrix_ref .)
    >               reduce using rule 34 (expression -> matrix_ref .)
    <               reduce using rule 34 (expression -> matrix_ref .)
    )               reduce using rule 34 (expression -> matrix_ref .)
    DIVASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    MULASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    SUBASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    ADDASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    =               reduce using rule 51 (id_ref -> matrix_ref .)


state 26

    (35) expression -> matrix_funcs .
    ;               reduce using rule 35 (expression -> matrix_funcs .)
    DOTDIV          reduce using rule 35 (expression -> matrix_funcs .)
    DOTMUL          reduce using rule 35 (expression -> matrix_funcs .)
    DOTSUB          reduce using rule 35 (expression -> matrix_funcs .)
    DOTADD          reduce using rule 35 (expression -> matrix_funcs .)
    /               reduce using rule 35 (expression -> matrix_funcs .)
    *               reduce using rule 35 (expression -> matrix_funcs .)
    -               reduce using rule 35 (expression -> matrix_funcs .)
    +               reduce using rule 35 (expression -> matrix_funcs .)
    '               reduce using rule 35 (expression -> matrix_funcs .)
    NE              reduce using rule 35 (expression -> matrix_funcs .)
    EQ              reduce using rule 35 (expression -> matrix_funcs .)
    GE              reduce using rule 35 (expression -> matrix_funcs .)
    LE              reduce using rule 35 (expression -> matrix_funcs .)
    >               reduce using rule 35 (expression -> matrix_funcs .)
    <               reduce using rule 35 (expression -> matrix_funcs .)
    )               reduce using rule 35 (expression -> matrix_funcs .)


state 27

    (36) expression -> relation_expression .
    ;               reduce using rule 36 (expression -> relation_expression .)
    DOTDIV          reduce using rule 36 (expression -> relation_expression .)
    DOTMUL          reduce using rule 36 (expression -> relation_expression .)
    DOTSUB          reduce using rule 36 (expression -> relation_expression .)
    DOTADD          reduce using rule 36 (expression -> relation_expression .)
    /               reduce using rule 36 (expression -> relation_expression .)
    *               reduce using rule 36 (expression -> relation_expression .)
    -               reduce using rule 36 (expression -> relation_expression .)
    +               reduce using rule 36 (expression -> relation_expression .)
    '               reduce using rule 36 (expression -> relation_expression .)
    NE              reduce using rule 36 (expression -> relation_expression .)
    EQ              reduce using rule 36 (expression -> relation_expression .)
    GE              reduce using rule 36 (expression -> relation_expression .)
    LE              reduce using rule 36 (expression -> relation_expression .)
    >               reduce using rule 36 (expression -> relation_expression .)
    <               reduce using rule 36 (expression -> relation_expression .)
    )               reduce using rule 36 (expression -> relation_expression .)


state 28

    (37) expression -> assign_expression .
    ;               reduce using rule 37 (expression -> assign_expression .)
    DOTDIV          reduce using rule 37 (expression -> assign_expression .)
    DOTMUL          reduce using rule 37 (expression -> assign_expression .)
    DOTSUB          reduce using rule 37 (expression -> assign_expression .)
    DOTADD          reduce using rule 37 (expression -> assign_expression .)
    /               reduce using rule 37 (expression -> assign_expression .)
    *               reduce using rule 37 (expression -> assign_expression .)
    -               reduce using rule 37 (expression -> assign_expression .)
    +               reduce using rule 37 (expression -> assign_expression .)
    '               reduce using rule 37 (expression -> assign_expression .)
    NE              reduce using rule 37 (expression -> assign_expression .)
    EQ              reduce using rule 37 (expression -> assign_expression .)
    GE              reduce using rule 37 (expression -> assign_expression .)
    LE              reduce using rule 37 (expression -> assign_expression .)
    >               reduce using rule 37 (expression -> assign_expression .)
    <               reduce using rule 37 (expression -> assign_expression .)
    )               reduce using rule 37 (expression -> assign_expression .)


state 29
